[gd_scene load_steps=17 format=3 uid="uid://big526h2iki81"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_wf74f"]
[ext_resource type="Script" path="res://Scripts/MeatPlayer.gd" id="2_a50y4"]
[ext_resource type="Texture2D" uid="uid://b6ek2010odcyb" path="res://Icons/VegFront1.jpg" id="3_83jw1"]
[ext_resource type="Script" path="res://Scripts/VegPlayer.gd" id="3_jcb33"]
[ext_resource type="Texture2D" uid="uid://cmejgw04vuf8m" path="res://Icons/VegBack1.jpg" id="4_02fun"]
[ext_resource type="Script" path="res://Scripts/PowerUpTimer.gd" id="4_a5wk3"]
[ext_resource type="Texture2D" uid="uid://iuuuqtcc4wd4" path="res://Icons/VegFront2.jpg" id="4_lec3r"]
[ext_resource type="Texture2D" uid="uid://wl35bvwgsp6y" path="res://Icons/VegFront.jpg" id="5_5jyfq"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="5_fs7ua"]
[ext_resource type="Texture2D" uid="uid://cqtgjw3vw1mkt" path="res://Icons/VegBack.jpg" id="5_ujr2s"]
[ext_resource type="Script" path="res://Scripts/PowerUpMenu.gd" id="6_664k3"]
[ext_resource type="Texture2D" uid="uid://dftse7ffqmay8" path="res://Icons/VegLeftStill.jpg" id="6_vtjvj"]
[ext_resource type="Texture2D" uid="uid://dfyvmdp21ev6c" path="res://Icons/VegLeft.jpg" id="7_h15p1"]
[ext_resource type="AudioStream" uid="uid://du30wsh3v8sg4" path="res://Audio/MAIN THEME.mp3" id="7_vwb3a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bwmtd"]
animations = [{
"frames": [{
"duration": 1.7,
"texture": ExtResource("4_02fun")
}, {
"duration": 1.7,
"texture": ExtResource("5_ujr2s")
}],
"loop": true,
"name": &"VegBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": ExtResource("3_83jw1")
}, {
"duration": 1.7,
"texture": ExtResource("4_lec3r")
}],
"loop": true,
"name": &"VegFront",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": ExtResource("6_vtjvj")
}, {
"duration": 1.7,
"texture": ExtResource("7_h15p1")
}],
"loop": true,
"name": &"VegLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5jyfq")
}],
"loop": true,
"name": &"VegStill",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_5wuk8"]

[node name="World" type="Node2D"]
script = ExtResource("1_wf74f")

[node name="MeatPlayer" type="CharacterBody2D" parent="."]
z_index = 10
position = Vector2(950, 200)
script = ExtResource("2_a50y4")

[node name="MeatPlayerSprite" type="AnimatedSprite2D" parent="MeatPlayer"]
scale = Vector2(0.507194, 0.457692)
animation = &""

[node name="MeatPlayerCollision" type="CollisionShape2D" parent="MeatPlayer"]

[node name="MeatCurrentInteraction" type="Label" parent="MeatPlayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="MeatInteraction" type="Area2D" parent="MeatPlayer"]

[node name="Collision" type="CollisionShape2D" parent="MeatPlayer/MeatInteraction"]

[node name="VegPlayer" type="CharacterBody2D" parent="."]
z_index = 10
position = Vector2(225, 200)
script = ExtResource("3_jcb33")

[node name="VegPlayerSprite" type="AnimatedSprite2D" parent="VegPlayer"]
scale = Vector2(0.435252, 0.435252)
sprite_frames = SubResource("SpriteFrames_bwmtd")
animation = &"VegFront"
frame_progress = 0.561656

[node name="VegPlayerCollision" type="CollisionShape2D" parent="VegPlayer"]

[node name="VegCurrentInteraction" type="Label" parent="VegPlayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="VegInteraction" type="Area2D" parent="VegPlayer"]

[node name="Collision" type="CollisionShape2D" parent="VegPlayer/VegInteraction"]

[node name="NPC1" type="CharacterBody2D" parent="."]

[node name="NPCSprite" type="AnimatedSprite2D" parent="NPC1"]

[node name="NPCCollision" type="CollisionShape2D" parent="NPC1"]

[node name="NPCCurrentInteraction" type="Label" parent="NPC1"]
offset_right = 40.0
offset_bottom = 23.0

[node name="NPCInteraction" type="Area2D" parent="NPC1"]

[node name="Collision" type="CollisionShape2D" parent="NPC1/NPCInteraction"]

[node name="NPCPathing" type="Node2D" parent="NPC1"]

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(574.75, 322.25)
scale = Vector2(1154.95, 648)
texture = SubResource("CanvasTexture_5wuk8")

[node name="UILayer" type="CanvasLayer" parent="."]
visible = false

[node name="PowerUpTimer" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_a5wk3")

[node name="GameOverScreen" type="TextureRect" parent="UILayer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenu" type="ColorRect" parent="UILayer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_fs7ua")

[node name="CenterContainer" type="CenterContainer" parent="UILayer/PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="UILayer/PauseMenu/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/PauseMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PauseMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UILayer/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="UILayer/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnToMenu" type="Button" parent="UILayer/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer/PauseMenu"]

[node name="PowerUpMenu" type="ColorRect" parent="UILayer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_664k3")

[node name="CenterContainer" type="CenterContainer" parent="UILayer/PowerUpMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="UILayer/PowerUpMenu/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option2" type="Button" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option3" type="Button" parent="UILayer/PowerUpMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer/PowerUpMenu"]

[node name="GameMainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vwb3a")
